# python-project-50

./: .coverage  .coveragerc  .gitignore  Makefile  README.md  coverage.xml  pyproject.toml
gendiff/: 1  __init__.py  tools.py  tools_gendiff.py
gendiff/formating/: __init__.py  plain.py  stylish.py  tools_formating.py
gendiff/scripts/: gendiff.py  tools.py
tests/: test_gendiff.py
tests/fixtures/: fixture_3.yaml  fixture_result_1x2_json.txt  fixture_result_3x4.txt  fixture_result_3x4_json.txt  fixture_result_5x6_json.txt  fixture_result_7x8_json.txt
