[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "GEN DIFF is a program that looks for differences between two files (file formats must be json or yaml; you can also compare these formats with each other) with the ability to choose what format the comparison result will be in"
repository = "https://github.com/FrissonFrisson/python-project-50.git"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Unlicense",
    "Programming Language :: Python :: 3",
]
authors = ["FrissonFrisson <compton56rus@gmail.com>"]
readme = "README.md"
packages = [{include = "gendiff"}]

[tool.poetry.dependencies]
python = "^3.11"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"